@@ -1,3 +1,6 @@
+9/25/2002
+	- Add the verbosecache option.
+
 9/23/2002
 	- Memory usage improvements to the ARecord class.
 
